--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,3 +30,4 @@ jobs:
     - run: |
         touch config.env
         echo "${{ secrets.PROD_ENV_FILE }}" > config.env
+    - run: node --exec ts-node ./index.ts
