--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,5 @@ jobs:
     - run: |
         touch config.env
         echo "${{ secrets.PROD_ENV_FILE }}" > config.env
+    - run : nodemon --exec ts-node ./index.ts
   
