--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,5 +30,5 @@ jobs:
     - run: |
         touch config.env
         echo "${{ secrets.PROD_ENV_FILE }}" > config.env
-    - run : node --exec ts-node ./index.ts
+    - run : npx tsc
   
