--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/index.js",
-    "dev": "nodemon --exec ts-node ./index.ts"
+    "dev": "nodemon --exec ts-node-dev ./index.ts"
   },
   "author": "Caleb Amao",
   "license": "ISC",
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/luxon": "^3.3.5",
+    "@types/multer": "^1.4.11",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -27,8 +28,10 @@
     "luxon": "^3.4.4",
     "mongoose": "^7.0.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "pug": "^3.0.2",
+    "sharp": "^0.32.6",
     "slugify": "^1.6.6",
     "ts-node": "^10.9.1",
     "validator": "^13.11.0",
@@ -39,11 +42,15 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/hpp": "^0.2.5",
+    "@types/html-to-text": "^9.0.4",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.9.4",
+    "@types/nodemailer": "^6.4.14",
+    "@types/pug": "^2.0.10",
     "@types/validator": "^13.11.7",
     "nodemon": "^3.0.1",
+    "ts-node-dev": "^2.0.0",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.2"
   }
