--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/luxon": "^3.3.5",
     "@types/multer": "^1.4.11",
+    "aws-sdk": "^2.1566.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
